# SimpleRA

./: .gitignore  CMakeLists.txt  README.md
data/: A.csv  B.csv  M.csv  N.csv  R.csv  RR.csv  S.csv  gen.cpp  genSparse.cpp
docs/: Overview.html  Overview.md  matrix.md  queries.txt
src/: CMakeLists.txt  Makefile  bufferManager.cpp  bufferManager.h  clear.cpp  cursor.cpp  cursor.h  executor.cpp  executor.h  global.h  hashPage.cpp  hashPage.h  logger.cpp  logger.h  matrix.cpp  matrix.h  matrixCatalogue.cpp  matrixCatalogue.h  matrixPage.cpp  matrixPage.h  page.cpp  page.h  partition.cpp  partition.h  partitionCatalogue.cpp  partitionCatalogue.h  semanticParser.cpp  semanticParser.h  server.cpp  syntacticParser.cpp  syntacticParser.h  table.cpp  table.h  tableCatalogue.cpp  tableCatalogue.h
src/executors/: clear.cpp  cross.cpp  distinct.cpp  export.cpp  exportMatrix.cpp  groupby.cpp  index.cpp  join.cpp  list.cpp  listMatrix.cpp  load.cpp  loadMatrix.cpp  load_matrix.cpp  print.cpp  printMatrix.cpp  print_matrix.cpp  projection.cpp  rename.cpp  selection.cpp  sort.cpp  source.cpp  transpose.cpp
